--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>start_boot</name>
+	<name>StartSpringBoot</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -40,6 +40,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId> spring-boot-devtools</artifactId>
+            <optional> true </ optional>
+        </ dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <!--<version>1.2.35</version>-->
+        </dependency>
+
+
+
 	</dependencies>
 
 	<build>
