--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ server:
 logging:
   path: logback.xml
   level:
-   com: warn  # 这个好像是全局的级别, 在logback.xml 设置了日志级别,更具体.
+      com.hb.start_boot.dao: warn
+
 
 
