--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId> spring-boot-devtools</artifactId>
-            <optional> true </ optional>
-        </ dependency>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
 
 
         <dependency>
@@ -54,7 +54,11 @@
             <!--<version>1.2.35</version>-->
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
 	</dependencies>
 
